--- a/netlify.toml
+++ b/netlify.toml
@@ -9,14 +9,11 @@
   # Node.js版本（如果需要）
   NODE_VERSION = "18"
 
-# 重定向规则
+# 重定向规则 - 修复：只对HTML页面进行重定向，不影响静态资源
 [[redirects]]
-  # SPA路由支持（如果将来扩展为SPA）
-  from = "/*"
-  to = "/index.html"
+  from = "/api/*"
+  to = "/.netlify/functions/:splat"
   status = 200
-  conditions = {Role = ["admin"], Country = ["!US"]}
-  force = false
 
 # 头部设置
 [[headers]]
@@ -47,6 +44,18 @@
   for = "*.css"
   [headers.values]
     # CSS文件缓存1年
+    Cache-Control = "public, max-age=31536000, immutable"
+
+[[headers]]
+  for = "*.jpg"
+  [headers.values]
+    # 图片文件缓存1年
+    Cache-Control = "public, max-age=31536000, immutable"
+
+[[headers]]
+  for = "*.png"
+  [headers.values]
+    # 图片文件缓存1年
     Cache-Control = "public, max-age=31536000, immutable"
 
 # 表单处理（如果将来需要）
